--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 # Site settings
-title: Jekyll-Uno
-description: 'Jekyll-Uno - a minimal, responsive theme for Jekyll'
+title: 'Joe Dorfman'
+description: 'Data Analyst in NYC'
 url: 'http://joshgerdes.com/jekyll-uno'
 baseurl: '/jekyll-uno'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
 author:
-  name: 'Josh Gerdes'
-  email: josh@joshgerdes.com
-  twitter_username: joshgerdes
-  facebook_username: joshgerdes
-  github_username:  joshgerdes
-  linkedin_username:  joshgerdes
+  name: 'Joe Dorfman'
+  email: joedorfman@gmail.com
+  twitter_username: joe_dorfman
+  facebook_username: 
+  github_username:  jcd2163
+  linkedin_username:  joedorfman
 
 defaults:
   -
