update github link

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author:
   email: joedorfman@gmail.com
   twitter_username: joe_dorfman
   facebook_username: 
-  github_username:  jcd2163
+  github_username:  joedorfman
   linkedin_username:  joedorfman
 
 defaults:
